Integrate ImmediateRegister operand into pattern